Fixed description vertical align for mobile

--- a/resources/css/groupdocs.viewer.mobile.css
+++ b/resources/css/groupdocs.viewer.mobile.css
@@ -20,10 +20,10 @@
     }
 
     #container{
-        width: 158px;
-        top: 0;
+        width: 158px;height: 360px;
+        
         margin-left: -79px;
-        margin-top: 140px;
+        margin-top: -180px;
     }
 
     #container > h1{
